--- a/src/404.html
+++ b/src/404.html
@@ -24,5 +24,9 @@
 
 <!-- Content -->
 {% block content %}
-  <h1>404 - Not found</h1>
+  <h1>
+    
+    <img src="../docs/screenshots/AWS_PROJECT_ERROR_PAGE.png">
+
+  </h1>
 {% endblock %}
